Update: Azul royal e amarelo, cards padronizados, gráfico maior, links de validação

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="header-content">
                 <div class="logo-section">
                     <h1 class="logo">NCP Cursos</h1>
-                    <p class="tagline">Capacitando Jacobina desde 2016</p>
+                    <p class="tagline">Capacitando <a href="https://www.instagram.com/ncp.cursos/" target="_blank" class="jacobina-link">Jacobina</a> desde 2016</p>
                 </div>
                 <div class="instagram-link">
                     <a href="https://www.instagram.com/ncp.cursos/" target="_blank" class="instagram-btn">
@@ -407,6 +407,14 @@
     <section class="metrics-dashboard">
         <div class="container">
             <h2 class="section-title">Dashboard de Métricas</h2>
+            <div class="validation-info">
+                <p class="validation-text">
+                    📊 <strong>Dados baseados em pesquisas de mercado:</strong> 
+                    <a href="https://sproutsocial.com/insights/instagram-stats/" target="_blank" class="validation-link">Taxa de engajamento média no Instagram é 1.8%</a> | 
+                    <a href="https://www.socialinsider.io/social-media-benchmarks/education" target="_blank" class="validation-link">Setor educacional tem 2.2% de engajamento</a> | 
+                    <a href="https://www.pepperlandmarketing.com/blog/higher-education-instagram-statistics" target="_blank" class="validation-link">Instituições de ensino alcançam 2.99% de engajamento</a>
+                </p>
+            </div>
             <div class="metrics-grid">
                 <div class="metric-card">
                     <div class="metric-header">
@@ -466,7 +474,15 @@
             </div>
             
             <div class="chart-container">
+                <h3>Projeção de Crescimento - Estratégia NCP Cursos (30 dias)</h3>
                 <canvas id="projectionChart"></canvas>
+                <div class="chart-validation">
+                    <p class="chart-validation-text">
+                        📈 <strong>Projeções baseadas em:</strong> 
+                        <a href="https://metricool.com/important-instagram-statistics/" target="_blank" class="validation-link">Crescimento médio de 16% com estratégias otimizadas</a> | 
+                        <a href="https://blog.hootsuite.com/instagram-statistics/" target="_blank" class="validation-link">79% dos marketers usam Instagram para negócios</a>
+                    </p>
+                </div>
             </div>
         </div>
     </section>
